--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "recharts": "^2.10.3",
     "lucide-react": "^0.344.0",
     "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.1"
+    "tailwind-merge": "^2.2.1",
+    "@google/generative-ai": "^0.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
